--- a/nba.html
+++ b/nba.html
@@ -226,6 +226,124 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for December 22, 2025
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Charlotte Hornets vs Cleveland Cavaliers
+        </a>
+       </td>
+       <td>
+        December 22, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 23, 2025 4:00 PM:00" data-start="December 22, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Indiana Pacers vs Boston Celtics
+        </a>
+       </td>
+       <td>
+        December 22, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 23, 2025 4:30 PM:00" data-start="December 22, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Dallas Mavericks vs New Orleans Pelicans
+        </a>
+       </td>
+       <td>
+        December 22, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 23, 2025 5:00 PM:00" data-start="December 22, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Utah Jazz vs Denver Nuggets
+        </a>
+       </td>
+       <td>
+        December 22, 2025 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 23, 2025 6:00 PM:00" data-start="December 22, 2025 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Memphis Grizzlies vs Oklahoma City Thunder
+        </a>
+       </td>
+       <td>
+        December 22, 2025 6:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 23, 2025 6:30 PM:00" data-start="December 22, 2025 6:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Orlando Magic vs Golden State Warriors
+        </a>
+       </td>
+       <td>
+        December 22, 2025 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 23, 2025 7:00 PM:00" data-start="December 22, 2025 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Detroit Pistons vs Portland Trail Blazers
+        </a>
+       </td>
+       <td>
+        December 22, 2025 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 23, 2025 7:00 PM:00" data-start="December 22, 2025 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
