--- a/nfl.html
+++ b/nfl.html
@@ -126,221 +126,256 @@
      Upcoming NCAA/NFL Events
     </h2>
     <table id="eventsTable">
-    <thead>
-     <tr>
-      <th>
-       Event
-      </th>
-      <th>
-       Start Time
-      </th>
-      <th>
-       Countdown
-      </th>
-     </tr>
-    </thead>
-    <tbody>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/redzone">
-        NFL RedZone
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/redzone">
+         NFL RedZone
+        </a>
+       </td>
+       <td>
+        December 21, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 22, 2025 10:00 AM:00" data-start="December 21, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <tr>
+        <td>
+         <a href="https://roxiestreams.live/nfl-streams-1">
+          Buffalo Bills vs Cleveland Browns
+         </a>
+        </td>
+        <td>
+         December 21, 2025 10:00 AM
+        </td>
+        <td>
+         <span class="countdown-timer" data-end="December 22, 2025 10:00 AM:00" data-start="December 21, 2025 10:00 AM:00">
+         </span>
+        </td>
+       </tr>
+       <tr>
+        <td>
+         <a href="https://roxiestreams.live/nfl-streams-2">
+          Los Angeles Chargers vs Dallas Cowboys
+         </a>
+        </td>
+        <td>
+         December 21, 2025 10:00 AM
+        </td>
+        <td>
+         <span class="countdown-timer" data-end="December 22, 2025 10:00 AM:00" data-start="December 21, 2025 10:00 AM:00">
+         </span>
+        </td>
+       </tr>
+       <tr>
+        <td>
+         <a href="https://roxiestreams.live/nfl-streams-3">
+          Kansas City Chiefs vs Tennessee Titans
+         </a>
+        </td>
+        <td>
+         December 21, 2025 10:00 AM
+        </td>
+        <td>
+         <span class="countdown-timer" data-end="December 22, 2025 10:00 AM:00" data-start="December 21, 2025 10:00 AM:00">
+         </span>
+        </td>
+       </tr>
+       <tr>
+        <td>
+         <a href="https://roxiestreams.live/nfl-streams-4">
+          Cincinnati Bengals vs Miami Dolphins
+         </a>
+        </td>
+        <td>
+         December 21, 2025 10:00 AM
+        </td>
+        <td>
+         <span class="countdown-timer" data-end="December 22, 2025 10:00 AM:00" data-start="December 21, 2025 10:00 AM:00">
+         </span>
+        </td>
+       </tr>
+       <tr>
+        <td>
+         <a href="https://roxiestreams.live/nfl-streams-5">
+          New York Jets vs New Orleans Saints
+         </a>
+        </td>
+        <td>
+         December 21, 2025 10:00 AM
+        </td>
+        <td>
+         <span class="countdown-timer" data-end="December 22, 2025 10:00 AM:00" data-start="December 21, 2025 10:00 AM:00">
+         </span>
+        </td>
+       </tr>
+       <tr>
+        <td>
+         <a href="https://roxiestreams.live/nfl-streams-6">
+          Minnesota Vikings vs New York Giants
+         </a>
+        </td>
+        <td>
+         December 21, 2025 10:00 AM
+        </td>
+        <td>
+         <span class="countdown-timer" data-end="December 22, 2025 10:00 AM:00" data-start="December 21, 2025 10:00 AM:00">
+         </span>
+        </td>
+       </tr>
+       <tr>
+        <td>
+         <a href="https://roxiestreams.live/nfl-streams-7">
+          Tampa Bay Buccaneers vs Carolina Panthers
+         </a>
+        </td>
+        <td>
+         December 21, 2025 10:00 AM
+        </td>
+        <td>
+         <span class="countdown-timer" data-end="December 22, 2025 10:00 AM:00" data-start="December 21, 2025 10:00 AM:00">
+         </span>
+        </td>
+       </tr>
+       <tr>
+        <td>
+         <a href="https://roxiestreams.live/nfl-streams-8">
+          Jacksonville Jaguars vs Denver Broncos
+         </a>
+        </td>
+        <td>
+         December 21, 2025 1:05 PM
+        </td>
+        <td>
+         <span class="countdown-timer" data-end="December 22, 2025 1:05 PM:00" data-start="December 21, 2025 1:05 PM:00">
+         </span>
+        </td>
+       </tr>
+       <tr>
+        <td>
+         <a href="https://roxiestreams.live/nfl-streams-9">
+          Atlanta Falcons vs Arizona Cardinals
+         </a>
+        </td>
+        <td>
+         December 21, 2025 1:05 PM
+        </td>
+        <td>
+         <span class="countdown-timer" data-end="December 22, 2025 1:05 PM:00" data-start="December 21, 2025 1:05 PM:00">
+         </span>
+        </td>
+       </tr>
+       <tr>
+        <td>
+         <a href="https://roxiestreams.live/nfl-streams-10">
+          Pittsburgh Steelers vs Detroit Lions
+         </a>
+        </td>
+        <td>
+         December 21, 2025 1:25 PM
+        </td>
+        <td>
+         <span class="countdown-timer" data-end="December 22, 2025 1:25 PM:00" data-start="December 21, 2025 1:25 PM:00">
+         </span>
+        </td>
+       </tr>
+       <tr>
+        <td>
+         <a href="https://roxiestreams.live/nfl-streams-11">
+          Las Vegas Raiders vs Houston Texans
+         </a>
+        </td>
+        <td>
+         December 21, 2025 1:25 PM
+        </td>
+        <td>
+         <span class="countdown-timer" data-end="December 22, 2025 1:25 PM:00" data-start="December 21, 2025 1:25 PM:00">
+         </span>
+        </td>
+       </tr>
+       <tr>
+        <td>
+         <a href="https://roxiestreams.live/nfl-streams-12">
+          New England Patriots vs Baltimore Ravens
+         </a>
+        </td>
+        <td>
+         December 21, 2025 5:20 PM
+        </td>
+        <td>
+         <span class="countdown-timer" data-end="December 22, 2025 5:20 PM:00" data-start="December 21, 2025 5:20 PM:00">
+         </span>
+        </td>
+       </tr>
+      </tr>
+     </tbody>
+    </table>
+    <h2>
+     NFL Schedule for Monday, December 22, 2025
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-1">
+         San Francisco 49ers vs Indianapolis Colts
+        </a>
+       </td>
+       <td>
+        December 22, 2025 5:15 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 23, 2025 5:15 PM:00" data-start="December 22, 2025 5:15 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
+    <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
+     <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
+      <li class="nav-item">
+       <a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">
+        Stream Request (Discord)
        </a>
-      </td>
-      <td>
-       December 21, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="December 22, 2025 10:00 AM:00" data-start="December 21, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-1">
-        Buffalo Bills vs Cleveland Browns
-       </a>
-      </td>
-      <td>
-       December 21, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="December 22, 2025 10:00 AM:00" data-start="December 21, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-2">
-        Los Angeles Chargers vs Dallas Cowboys
-       </a>
-      </td>
-      <td>
-       December 21, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="December 22, 2025 10:00 AM:00" data-start="December 21, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-3">
-        Kansas City Chiefs vs Tennessee Titans
-       </a>
-      </td>
-      <td>
-       December 21, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="December 22, 2025 10:00 AM:00" data-start="December 21, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-4">
-        Cincinnati Bengals vs Miami Dolphins
-       </a>
-      </td>
-      <td>
-       December 21, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="December 22, 2025 10:00 AM:00" data-start="December 21, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-5">
-        New York Jets vs New Orleans Saints
-       </a>
-      </td>
-      <td>
-       December 21, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="December 22, 2025 10:00 AM:00" data-start="December 21, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-6">
-        Minnesota Vikings vs New York Giants
-       </a>
-      </td>
-      <td>
-       December 21, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="December 22, 2025 10:00 AM:00" data-start="December 21, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-7">
-        Tampa Bay Buccaneers vs Carolina Panthers
-       </a>
-      </td>
-      <td>
-       December 21, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="December 22, 2025 10:00 AM:00" data-start="December 21, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-8">
-        Jacksonville Jaguars vs Denver Broncos
-       </a>
-      </td>
-      <td>
-       December 21, 2025 1:05 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="December 22, 2025 1:05 PM:00" data-start="December 21, 2025 1:05 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-9">
-        Atlanta Falcons vs Arizona Cardinals
-       </a>
-      </td>
-      <td>
-       December 21, 2025 1:05 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="December 22, 2025 1:05 PM:00" data-start="December 21, 2025 1:05 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-10">
-        Pittsburgh Steelers vs Detroit Lions
-       </a>
-      </td>
-      <td>
-       December 21, 2025 1:25 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="December 22, 2025 1:25 PM:00" data-start="December 21, 2025 1:25 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-11">
-        Las Vegas Raiders vs Houston Texans
-       </a>
-      </td>
-      <td>
-       December 21, 2025 1:25 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="December 22, 2025 1:25 PM:00" data-start="December 21, 2025 1:25 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-12">
-        New England Patriots vs Baltimore Ravens
-       </a>
-      </td>
-      <td>
-       December 21, 2025 5:20 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="December 22, 2025 5:20 PM:00" data-start="December 21, 2025 5:20 PM:00">
-       </span>
-      </td>
-     </tr>
-    </tbody>
-   </table>
-   <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
-    <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
-     <li class="nav-item">
-      <a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">
-       Stream Request (Discord)
-      </a>
-     </li>
-    </ul>
-    <p class="mb-0 text-body-secondary text-center text-lg-start">
-     Roxiestreams © 2024
-    </p>
-   </footer>
-   <script src="js/bootstrap.bundle.min.js">
-   </script>
-   <script>
-    function startCountdown() {
+      </li>
+     </ul>
+     <p class="mb-0 text-body-secondary text-center text-lg-start">
+      Roxiestreams © 2024
+     </p>
+    </footer>
+    <script src="js/bootstrap.bundle.min.js">
+    </script>
+    <script>
+     function startCountdown() {
             var countdownElements = document.querySelectorAll('.countdown-timer');
 
             countdownElements.forEach(function(element) {
@@ -369,7 +404,8 @@
         }
 
         window.onload = startCountdown;
-   </script>
+    </script>
+   </div>
   </div>
  </body>
 </html>
