--- a/nhl.html
+++ b/nhl.html
@@ -139,6 +139,29 @@
             <td><a href="https://roxiestreams.live/nhl-streams-9">Vegas Golden Knights vs Edmonton Oilers</a></td>
             <td>December 21, 2025 05:00 PM</td>
             <td><span class="countdown-timer" data-end="2025-12-22 17:00:00" data-start="2025-12-21 17:00:00"></span></td>
+        </tr>
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Monday, December 22, 2025</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">St. Louis Blues vs Tampa Bay Lightning</a></td>
+            <td>December 22, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-23 16:00:00" data-start="2025-12-22 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">Vancouver Canucks vs Philadelphia Flyers</a></td>
+            <td>December 22, 2025 04:30 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-23 16:30:00" data-start="2025-12-22 16:30:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">Seattle Kraken vs Anaheim Ducks</a></td>
+            <td>December 22, 2025 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-23 19:00:00" data-start="2025-12-22 19:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-4">Columbus Blue Jackets vs Los Angeles Kings</a></td>
+            <td>December 22, 2025 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-23 19:00:00" data-start="2025-12-22 19:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
