--- a/soccer.html
+++ b/soccer.html
@@ -96,67 +96,27 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Girona vs Atlético Madrid</a>
-<td>December 21, 2025 05:00 AM</td>
-<td><span class="countdown-timer" data-end="December 22, 2025 04:00:00" data-start="December 21, 2025 05:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Alverca vs Porto</a>
+<td>December 22, 2025 10:45 AM</td>
+<td><span class="countdown-timer" data-end="December 23, 2025 09:45:00" data-start="December 22, 2025 10:45:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Hearts vs Raners</a>
-<td>December 21, 2025 05:30 AM</td>
-<td><span class="countdown-timer" data-end="December 22, 2025 04:30:00" data-start="December 21, 2025 05:30:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Napoli vs Bologna</a>
+<td>December 22, 2025 11:00 AM</td>
+<td><span class="countdown-timer" data-end="December 23, 2025 10:00:00" data-start="December 22, 2025 11:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Auxerre vs Monaco</a>
-<td>December 21, 2025 05:45 AM</td>
-<td><span class="countdown-timer" data-end="December 22, 2025 04:45:00" data-start="December 21, 2025 05:45:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Athletic Club vs Espanyol</a>
+<td>December 22, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 23, 2025 11:00:00" data-start="December 22, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Bourg En Bresse vs Marseille</a>
-<td>December 21, 2025 05:45 AM</td>
-<td><span class="countdown-timer" data-end="December 22, 2025 04:45:00" data-start="December 21, 2025 05:45:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Fulham vs Nottingham</a>
+<td>December 22, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 23, 2025 11:00:00" data-start="December 22, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Sassuolo vs Torino</a>
-<td>December 21, 2025 06:00 AM</td>
-<td><span class="countdown-timer" data-end="December 22, 2025 05:00:00" data-start="December 21, 2025 06:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Benfica vs Famalicão</a>
+<td>December 22, 2025 12:45 PM</td>
+<td><span class="countdown-timer" data-end="December 23, 2025 11:45:00" data-start="December 22, 2025 12:45:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Villarreal vs Barcelona</a>
-<td>December 21, 2025 07:15 AM</td>
-<td><span class="countdown-timer" data-end="December 22, 2025 06:15:00" data-start="December 21, 2025 07:15:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Heidenheim vs Bayern München</a>
-<td>December 21, 2025 08:30 AM</td>
-<td><span class="countdown-timer" data-end="December 22, 2025 07:30:00" data-start="December 21, 2025 08:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">Aston Villa vs Manchester United</a>
-<td>December 21, 2025 08:30 AM</td>
-<td><span class="countdown-timer" data-end="December 22, 2025 07:30:00" data-start="December 21, 2025 08:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-8">Galatasaray vs Kasımpaşa</a>
-<td>December 21, 2025 09:00 AM</td>
-<td><span class="countdown-timer" data-end="December 22, 2025 08:00:00" data-start="December 21, 2025 09:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Al Najma vs Al Nassr</a>
-<td>December 21, 2025 09:30 AM</td>
-<td><span class="countdown-timer" data-end="December 22, 2025 08:30:00" data-start="December 21, 2025 09:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Elche vs Rayo Vallecano</a>
-<td>December 21, 2025 09:30 AM</td>
-<td><span class="countdown-timer" data-end="December 22, 2025 08:30:00" data-start="December 21, 2025 09:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Genoa vs Atalanta</a>
-<td>December 21, 2025 11:45 AM</td>
-<td><span class="countdown-timer" data-end="December 22, 2025 10:45:00" data-start="December 21, 2025 11:45:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Real Betis vs Getafe</a>
-<td>December 21, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 22, 2025 11:00:00" data-start="December 21, 2025 12:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-9">Peru vs Bolivia</a>
-<td>December 21, 2025 12:30 PM</td>
-<td><span class="countdown-timer" data-end="December 22, 2025 11:30:00" data-start="December 21, 2025 12:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-10">Vasco Da Gama vs Corinthians</a>
-<td>December 21, 2025 13:00 PM</td>
-<td><span class="countdown-timer" data-end="December 22, 2025 12:00:00" data-start="December 21, 2025 13:00:00"></span></td>
-<tr>
-</tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table></div>
+</tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
 <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
