--- a/index.html
+++ b/index.html
@@ -183,19 +183,29 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="https://roxiestreams.live/soccer-streams-1">Laliga</a></td>
-                    <td>December 21, 2025 05:00 AM</td>
-                    <td><span class="countdown-timer" data-start="December 21, 2025 05:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/soccer-streams-3">Laliga</a></td>
+                    <td>December 22, 2025 12:00 PM</td>
+                    <td><span class="countdown-timer" data-start="December 22, 2025 12:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/soccer-streams-7">Premier League</a></td>
-                    <td>December 21, 2025 08:30 AM</td>
-                    <td><span class="countdown-timer" data-start="December 21, 2025 08:30:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/soccer-streams-4">Premier League</a></td>
+                    <td>December 22, 2025 12:00 PM</td>
+                    <td><span class="countdown-timer" data-start="December 22, 2025 12:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/nfl">NFL WEEK 17</a></td>
-                    <td>December 21, 2025 09:00 AM</td>
-                    <td><span class="countdown-timer" data-start="December 21, 2025 09:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/nba">NBA</a></td>
+                    <td>December 22, 2025 16:00 PM</td>
+                    <td><span class="countdown-timer" data-start="December 22, 2025 16:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                </tr>
+                <tr>
+                    <td><a href="https://roxiestreams.live/wwe-streams">WWE RAW</a></td>
+                    <td>December 22, 2025 17:00 PM</td>
+                    <td><span class="countdown-timer" data-start="December 22, 2025 17:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                </tr>
+                <tr>
+                    <td><a href="https://roxiestreams.live/nfl">NFL (MNF)</a></td>
+                    <td>December 22, 2025 17:15 PM</td>
+                    <td><span class="countdown-timer" data-start="December 22, 2025 17:15:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
                 <tr>
